--- a/style.css
+++ b/style.css
@@ -85,3 +85,15 @@ body{
     font-weight: bold;
     font-size: large;
 }
+
+.graus{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+
+    background-color: #fff;
+    margin-bottom: 10px;
+    box-shadow: 0px 4px 10px rgba(99, 99, 99, 0.4);
+    cursor: pointer;
+}
